--- a/src/disc1_embedded_medical.ioc
+++ b/src/disc1_embedded_medical.ioc
@@ -249,13 +249,13 @@ PC7.Locked=true
 PC7.Mode=Master_Clock_Activated
 PC7.Signal=I2S3_MCK
 PD12.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
-PD12.GPIO_Label=LD4 [Green Led]
+PD12.GPIO_Label=green_led
 PD12.GPIO_PuPd=GPIO_NOPULL
 PD12.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PD12.Locked=true
 PD12.Signal=GPIO_Output
 PD13.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
-PD13.GPIO_Label=LD3 [Orange Led]
+PD13.GPIO_Label=orange_led
 PD13.GPIO_PuPd=GPIO_NOPULL
 PD13.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PD13.Locked=true
@@ -337,7 +337,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_I2C1_Init-I2C1-false-HAL-true,4-MX_I2S3_Init-I2S3-false-HAL-true,5-MX_SPI1_Init-SPI1-false-HAL-true,6-MX_USB_HOST_Init-USB_HOST-false-HAL-false
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_I2C1_Init-I2C1-false-HAL-true,4-MX_I2S3_Init-I2S3-false-HAL-true,5-MX_SPI1_Init-SPI1-false-HAL-true,6-MX_USB_HOST_Init-USB_HOST-false-HAL-false,7-MX_USART2_UART_Init-USART2-false-HAL-true
 RCC.48MHZClocksFreq_Value=48000000
 RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
