--- a/src/disc1_embedded_medical.ioc
+++ b/src/disc1_embedded_medical.ioc
@@ -21,7 +21,7 @@ Mcu.IP2=NVIC
 Mcu.IP3=RCC
 Mcu.IP4=SPI1
 Mcu.IP5=SYS
-Mcu.IP6=USART2
+Mcu.IP6=USART3
 Mcu.IP7=USB_HOST
 Mcu.IP8=USB_OTG_FS
 Mcu.IPNb=9
@@ -29,12 +29,12 @@ Mcu.Name=STM32F407V(E-G)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PE3
 Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PA4
-Mcu.Pin11=PA5
-Mcu.Pin12=PA6
-Mcu.Pin13=PA7
-Mcu.Pin14=PB2
-Mcu.Pin15=PB10
+Mcu.Pin10=PA6
+Mcu.Pin11=PA7
+Mcu.Pin12=PB2
+Mcu.Pin13=PB10
+Mcu.Pin14=PB11
+Mcu.Pin15=PD8
 Mcu.Pin16=PD12
 Mcu.Pin17=PD13
 Mcu.Pin18=PD14
@@ -62,8 +62,8 @@ Mcu.Pin4=PH1-OSC_OUT
 Mcu.Pin5=PC0
 Mcu.Pin6=PC3
 Mcu.Pin7=PA0-WKUP
-Mcu.Pin8=PA2
-Mcu.Pin9=PA3
+Mcu.Pin8=PA4
+Mcu.Pin9=PA5
 Mcu.PinsNb=37
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
@@ -81,7 +81,6 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_0
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:false
-NVIC.USART2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 PA0-WKUP.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 PA0-WKUP.GPIO_Label=B1 [Blue PushButton]
@@ -122,10 +121,6 @@ PA14.GPIO_Label=SWCLK
 PA14.Locked=true
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
-PA2.Mode=Asynchronous
-PA2.Signal=USART2_TX
-PA3.Mode=Asynchronous
-PA3.Signal=USART2_RX
 PA4.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PA4.GPIO_Label=I2S3_WS [CS43L22_LRCK]
 PA4.GPIO_Mode=GPIO_MODE_AF_PP
@@ -172,6 +167,8 @@ PB10.GPIO_PuPd=GPIO_NOPULL
 PB10.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PB10.Locked=true
 PB10.Signal=I2S2_CK
+PB11.Mode=Asynchronous
+PB11.Signal=USART3_RX
 PB2.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_Mode
 PB2.GPIO_Label=BOOT1
 PB2.GPIO_Mode=GPIO_MODE_INPUT
@@ -284,6 +281,8 @@ PD5.GPIO_Mode=GPIO_MODE_INPUT
 PD5.GPIO_PuPd=GPIO_NOPULL
 PD5.Locked=true
 PD5.Signal=GPIO_Input
+PD8.Mode=Asynchronous
+PD8.Signal=USART3_TX
 PE1.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 PE1.GPIO_Label=MEMS_INT2 [LIS302DL_INT2]
 PE1.GPIO_ModeDefaultEXTI=GPIO_MODE_EVT_RISING
@@ -381,8 +380,8 @@ SPI1.IPParameters=CalculateBaudRate-Full_Duplex_Master,BaudRatePrescaler-Full_Du
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.Mode-Full_Duplex_Master=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
-USART2.IPParameters=VirtualMode
-USART2.VirtualMode=VM_ASYNC
+USART3.IPParameters=VirtualMode
+USART3.VirtualMode=VM_ASYNC
 USB_HOST.BSP.number=1
 USB_HOST.IPParameters=VirtualModeFS,USBH_HandleTypeDef-CDC_FS
 USB_HOST.USBH_HandleTypeDef-CDC_FS=hUsbHostFS
